selecting a bizarre attraction will now populate the DOM with correct attraction card

--- a/styles/main.css
+++ b/styles/main.css
@@ -41,7 +41,7 @@ body {
     margin: 3px;
 }
 
-.bizarreDropdown{
+#bizarreDropdown{
     background-color: #4D774E;
     color: white;
     width: 200px;
