save point to fetch teammate branch

--- a/styles/main.css
+++ b/styles/main.css
@@ -253,7 +253,7 @@ body {
 
 
 /* The PopUp (background) */
-. {
+.detailsPopUp {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
@@ -267,7 +267,7 @@ body {
   }
   
   /* Modal Content/Box */
-  .modal-content {
+  .bizarreDetailsTarget {
     background-color: #fefefe;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
