dialog box for more details button working

--- a/styles/main.css
+++ b/styles/main.css
@@ -273,7 +273,7 @@ body {
   }
   
   /* Modal Content/Box */
-  .bizarreDetailsTarget {
+  .modal-content {
     background-color: #fefefe;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
