--- a/styles/main.css
+++ b/styles/main.css
@@ -182,7 +182,7 @@ body {
     background-color: #164A41;
     color: white;
     margin: 2px;
-    display: ;
+    display: none;
 }
 
 .addParkButton{
@@ -296,15 +296,15 @@ body {
   }
   
   /* The Close Button */
-  .close {
+  #close {
     color: #aaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
   }
   
-  .close:hover,
-  .close:focus {
+  #close:hover,
+  #close:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
