getting save itineraries to work and tweaking css

--- a/styles/main.css
+++ b/styles/main.css
@@ -23,6 +23,9 @@ body {
     color: white;
     height: 120px;
     margin: 40px 0px 40px 0px;
+    padding-left: 20px;
+    font-size: 3.7em;
+    letter-spacing: 4px;
     width: 1500px;
     display: flex;
     align-items: center;
@@ -95,6 +98,9 @@ body {
 #weather{
     font-family: 'Staatliches', sans-serif;
     letter-spacing: 2px;
+}
+
+#weatherAsideCard{
     border: 2px solid black;
     padding: 5px 5px 10px 5px;
     margin-bottom: 5px;
@@ -167,7 +173,7 @@ body {
 
 .eateryCard{
     border: solid #164A41 5px;
-    padding: 5px;
+    padding: 10px;
 }
 
 .eateryHeadline{
@@ -231,7 +237,7 @@ body {
 
 .bizarreCard{
     border: solid #164A41 5px;
-    padding: 5px;
+    padding: 10px;
 }
 
 .attractionHeadline{
@@ -256,7 +262,7 @@ body {
 
 .parkCard{
     border: solid #164A41 5px;
-    padding: 5px;
+    padding: 10px;
 }
 
 .parkHeadline{
@@ -392,9 +398,30 @@ body {
   .icon{
       height: 40px;
       width: 40px;
+      padding: 2px;
   }
 
   .eateryTitle{
       display: flex;
       align-items: center;
+  }
+
+  .parkTitle{
+    display: flex;
+    align-items: center;
+  }
+
+  .bizarreTitle{
+    display: flex;
+    align-items: center;
+  }
+
+  .detailInfo{
+    border: solid #4D774E 5px;
+    margin-top: 10px;
+    padding: 10px;
+  }
+
+  #savedCard{
+    padding: 5px;
   }
